--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@nextui-org/react": "^2.3.6",
     "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^0.20.0",
     "formik": "^2.4.6",
     "framer-motion": "^11.2.4",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.2"
+    "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
